<resources>
    <string name="app_name">JNTUA-CEK</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">JNTUA College Of Engineering,kalikiri </string>
    <string name="nav_header_subtitle">www.jntuacek.ac.in</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">SlideShow</string>
    <string name="search">Search</string>
    <string name="menu_account">Account</string>
    <string name="account_name">Create an Account</string>
    <string name="enter_the_rollnumber">Enter the RollNumber</string>
    <string name="enter_the_gmail">Enter the Gmail</string>
    <string name="submit">Submit</string>
    <string name="menu_update">Update</string>
    <string name="welcome">Welcome!</string>
    <string name="enter_the_username">Enter the Username</string>
    <string name="submit1">Login</string>
    <string name="null1">Null</string>
    <string name="principle">Principle: Mrs.Visali</string>
    <string name="submit2">Register</string>
    <string name="registration_page">Registration Page</string>
    <string name="enter_the_name">Enter the Name</string>
    <string name="gmail">Enter the Gmail</string>
    <string name="enter_the_phonenumber">Enter the PhoneNumber</string>
    <string name="re">Register</string>
    <string name="enter_the_date_of_birth">Enter the Date Of Birth</string>
    <string name="confirm_the_password">Confirm the Password</string>
    <string name="enter_the_roll_number">Enter the Roll Number</string>
    <string name="aw">Awards</string>
    <string name="principal">Principal</string>
    <string name="miss_visali">Miss.Visali</string>
    <string name="exam">exam</string>
    <string name="welcome_to_home">Welcome to Home!</string>

</resources>