<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    android:background="@drawable/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_page"
            android:layout_margin="@dimen/d"
            android:textSize="@dimen/t_s"
            android:textColor="@color/colorb"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_name"
            android:textSize="@dimen/m"
            android:textColor="@color/colorb"
            android:inputType="text"
            android:textColorHint="@color/colorb"
            android:layout_margin="@dimen/d"
            android:id="@+id/ed_name"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_roll_number"
            android:textSize="@dimen/m"
            android:textColor="@color/colorb"
            android:inputType="text"
            android:textColorHint="@color/colorb"
            android:layout_margin="@dimen/d"
            android:id="@+id/ed_roll"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_gmail"
            android:textSize="@dimen/m"
            android:textColor="@color/colorb"
            android:textColorHint="@color/colorb"
            android:inputType="textEmailAddress"
            android:layout_margin="@dimen/d"
            android:id="@+id/ed_email"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter the Password"
            android:textSize="@dimen/m"
            android:textColor="@color/colorb"
            android:inputType="textPassword"
            android:textColorHint="@color/colorb"
            android:layout_margin="@dimen/d"
            android:id="@+id/ed_pass"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_the_password"
            android:textSize="@dimen/m"
            android:textColor="@color/colorb"
            android:inputType="textPassword"
            android:textColorHint="@color/colorb"
            android:layout_margin="@dimen/d"
            android:id="@+id/ed_cpass"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_phonenumber"
            android:textSize="@dimen/m"
            android:inputType="phone"
            android:textColor="@color/colorb"
            android:textColorHint="@color/colorb"
            android:layout_margin="@dimen/d"
            android:id="@+id/ed_phone"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_date_of_birth"
            android:textSize="@dimen/m"
            android:textColor="@color/colorb"
            android:inputType="date"
            android:textColorHint="@color/colorb"
            android:layout_margin="@dimen/d"
            android:id="@+id/ed_birth"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/re"
            android:layout_gravity="center"
            android:onClick="registerl"
            android:textColor="@color/colorb"
            android:background="@color/qw"
            android:id="@+id/register_button"
            android:layout_margin="@dimen/d"/>
    </LinearLayout>
</ScrollView>


